plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id "nebula.lint" version "20.5.6"
    id "io.freefair.lombok" version "8.13.1"
}
apply plugin: 'io.spring.dependency-management'

group = 'midi-guitar'
version = '0.2.0'

jar.archiveFileName = 'midi-guitar-server.jar'
bootJar.archiveFileName = 'midi-guitar-server.jar'

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
    maven {
        url = "https://maven.pkg.github.com/seansund/maven"
        credentials {
            username = project.findProperty("gpr.user") ?: System.getenv("GIT_USERNAME")
            password = project.findProperty("gpr.key") ?: System.getenv("GIT_TOKEN")
        }
    }
}

dependencies {
    // This dependency is used by the application.
    implementation libs.guava

    implementation 'midi-guitar:midi-guitar:1.1.0'

    implementation group: 'io.reactivex.rxjava3', name: 'rxjava', version: '3.1.10'
    implementation group: 'io.projectreactor.addons', name: 'reactor-adapter', version: '3.5.2'
    implementation 'org.springframework.boot:spring-boot-starter-graphql'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework:spring-webflux'
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'io.projectreactor:reactor-test'

    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
    implementation group: 'org.yaml', name: 'snakeyaml', version: '2.4'
}

testing {
    suites {
        // Configure the built-in test suite
        test {
            // Use JUnit Jupiter test framework
            useJUnitJupiter('5.11.3')
        }
    }
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

springBoot {
    mainClass = 'com.dex.midi.server.ServerApplication'
}
